# compass

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.gpu  LICENSE  MOSAIC.md  README.md  SECURITY.md  audit.toml  docker-compose.yml  porter.yaml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/compass/: Cargo.toml
crates/compass-index-api/: Cargo.toml
crates/compass-index-api/src/: lib.rs
crates/compass-vector-gpu/: Cargo.toml
crates/compass-vector-gpu/src/: lib.rs
crates/compass/src/: filter.rs  main.rs  models.rs  scoring.rs  telemetry.rs
crates/compass/src/api/: collections.rs  mod.rs  search.rs  segments.rs
crates/compass/src/collections/: mod.rs  rebuild.rs  relationships.rs  store.rs
crates/compass/src/embed/: candle_bge.rs  distilled.rs
crates/compass/src/search/: backend.rs  chunk_store.rs  filter_bench.rs  filter_index.rs  filter_pushdown.rs  hybrid.rs  mmap_vectors.rs  mod.rs  tantivy_fts.rs  vector.rs
docs/: v0.4-filter-aware-ann.md
examples/python/: compass_client.py
scripts/: download-models.sh
src/: main.rs  models.rs
src/api/: collections.rs  ingest.rs  mod.rs
src/collections/: mod.rs  relationships.rs  store.rs
src/embed/: mod.rs
src/search/: hybrid.rs  mod.rs  vector.rs
