[package]
name = "compass"
version = "0.1.0"
edition = "2021"
description = "Embedded vector + full-text search engine for Captain. Zero external dependencies."

[dependencies]
# Web framework (like Express.js for Rust)
axum = { version = "0.8", features = ["json"] }
# Async runtime (required by axum — everything is async)
tokio = { version = "1", features = ["full"] }
# JSON serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# UUID generation for chunk IDs
uuid = { version = "1", features = ["v4"] }
# Full-text search engine (embedded, like Elasticsearch but in-process)
tantivy = "0.22"
# HNSW vector index (mmap-backed, disk-persistent)
usearch = "2"
# HuggingFace tokenizer — loads tokenizer.json for query-time tokenization
tokenizers = "0.21"
# Safetensors — loads embedding matrices from .safetensors files
safetensors = "0.5"
# Half-precision floats (embedding matrices are stored as FP16)
half = "2"
# Candle — HuggingFace's Rust ML framework for running BGE-small natively
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
# Download model weights from HuggingFace Hub
hf-hub = "0.3"
# Parallel vector insertion during index build
rayon = "1.10"
# CORS middleware for development
tower-http = { version = "0.6", features = ["cors"] }
# Tracing/logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
incremental = true
opt-level = 3
