[workspace]
resolver = "2"
members = [
    "crates/compass",
    "crates/compass-index-api",
    "crates/compass-vector-gpu",
]
default-members = ["crates/compass"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Captain Technologies <eng@runcaptain.com>"]
repository = "https://github.com/runcaptain/compass"
homepage = "https://runcaptain.com"
rust-version = "1.86"

[workspace.dependencies]
# Async runtime + web framework
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Common utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rayon = "1.10"
half = "2"

# Search engines
tantivy = "0.22"
usearch = "2"

# Embedding stack
tokenizers = "0.21"
safetensors = "0.5"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
hf-hub = "0.3"

# Mmap + disk storage
memmap2 = "0.9"
bytemuck = { version = "1", features = ["derive"] }
redb = "2.4"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal crates
compass-index-api = { path = "crates/compass-index-api", version = "0.2.0" }

[profile.release]
incremental = true
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
inherits = "release"
debug = true
