[workspace]
resolver = "2"
members = [
    "crates/compass",
    "crates/compass-index-api",
    "crates/compass-vector-gpu",
]
default-members = ["crates/compass"]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Captain Technologies <founders@runcaptain.com>"]
repository = "https://github.com/runcaptain/compass"
homepage = "https://runcaptain.com"
rust-version = "1.88"

[workspace.dependencies]
# Async runtime + web framework
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Common utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rayon = "1.10"
half = "2"

# Search engines
tantivy = "0.22"
usearch = "2"
# Filter pushdown for filter-aware ANN. Pure-Rust roaring bitmaps; no C dep.
# See docs/v0.4-filter-aware-ann.md.
roaring = "0.10"

# Embedding stack
tokenizers = "0.21"
safetensors = "0.5"
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"
# Note: `hf-hub` is intentionally not declared here. Model weights are
# fetched by the predeploy script (`scripts/download-models.sh`) via curl,
# not from Rust at runtime. Removing hf-hub drops native-tls + openssl
# from the runtime image (rest of the stack is rustls-only).

# Mmap + disk storage
memmap2 = "0.9"
bytemuck = { version = "1", features = ["derive"] }
redb = "2.4"

# HTTP client (telemetry)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal crates
compass-index-api = { path = "crates/compass-index-api", version = "0.2.0" }

[profile.release]
# `incremental = true` on release bloats the build cache for no runtime
# benefit; turn it off so CI produces clean, reproducible artifacts.
incremental = false
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true
